force-app/main/default/objects/Email_Send__c/Email_Send__c.object-meta.xml
<CustomObject>
    <description>Tracks individual email sends to customers as part of email journeys. Part of the Journal Business module.</description>
    <label>Email Send</label>
    <nameField>
        <displayFormat>EMAIL-{000000}</displayFormat>
        <label>Email Send Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Sends</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>