force-app/main/default/objects/Email_Send__c/fields/Clicked__c.field-meta.xml
<CustomField>
    <fullName>Clicked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clicked</label>
    <type>Checkbox</type>
    <description>TRUE if customer clicked a link in the email</description>
</CustomField>