force-app/main/default/objects/Email_Send__c/fields/Email_Journey__c.field-meta.xml
<CustomField>
    <fullName>Email_Journey__c</fullName>
    <label>Email Journey</label>
    <referenceTo>Email_Journey__c</referenceTo>
    <relationshipLabel>Email Sends</relationshipLabel>
    <relationshipName>Email_Sends</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <description>Link to parent email journey campaign</description>
</CustomField>