force-app/main/default/objects/Email_Send__c/fields/Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Email_Template__c</fullName>
    <label>Email Template</label>
    <length>80</length>
    <type>Text</type>
    <description>Name of email template used (e.g., "Welcome Day 1", "Post-Purchase Thank You")</description>
</CustomField>