force-app/main/default/objects/Email_Send__c/fields/Journal_Customer__c.field-meta.xml
<CustomField>
    <fullName>Journal_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Journal Customer</label>
    <referenceTo>Journal_Customer__c</referenceTo>
    <relationshipLabel>Email Sends</relationshipLabel>
    <relationshipName>Email_Sends</relationshipName>
    <type>Lookup</type>
    <description>Recipient customer</description>
</CustomField>