force-app/main/default/objects/Email_Send__c/fields/Opened__c.field-meta.xml
<CustomField>
    <fullName>Opened__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opened</label>
    <type>Checkbox</type>
    <description>TRUE if customer opened the email</description>
</CustomField>