force-app/main/default/objects/Email_Send__c/fields/Purchased__c.field-meta.xml
<CustomField>
    <fullName>Purchased__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Purchased</label>
    <type>Checkbox</type>
    <description>TRUE if customer made a purchase after receiving this email (conversion tracking)</description>
</CustomField>