force-app/main/default/objects/Email_Send__c/fields/Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Sent_Date__c</fullName>
    <label>Sent Date</label>
    <type>DateTime</type>
    <description>Date/time email was sent</description>
</CustomField>